# SimplePlatformer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
res/: generated_map.json  map.json
res/map/: generated_lights.json  generated_map.json
src/: fileio.cpp  fileio.h  game.cpp  game.h  gui.cpp  gui.h  image.h  logger.cpp  logger.h  renderer.h  resource_manager.cpp  resource_manager.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
src/lib/: stb_definition.cpp
src/map/: animation_engine.cpp  animation_engine.h  characters.h  game_map.cpp  game_map.h  game_object.cpp  game_object.h  light_source.cpp  light_source.h  move_observer.h  player.cpp  player.h  tiles.cpp  tiles.h
src/rendering/: fragment.glsl  image.cpp  image.h  resource_manager.cpp  resource_manager.h  shader_program.cpp  shader_program.h  sprite_renderer.cpp  sprite_renderer.h  stb_definition.cpp  texture.cpp  texture.h  vertex.glsl
src/resources/: image.cpp  image.h  resource_manager.cpp  resource_manager.h
utils/: map_generator.py  sample_map.txt
